force-app/main/default/objects/CourseAvailability__c/CourseAvailability__c.object-meta.xml
<CustomObject>
    <label>Course Availability</label>
    <nameField>
        <displayFormat>AID-CA-{0000}</displayFormat>
        <label>Course Availability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>