force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Application_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Application_Closing_Date__c</fullName>
    <description>for IST-89</description>
    <label>Application Closing Date</label>
    <type>DateTime</type>
</CustomField>