force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Application_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Application_Open_Date__c</fullName>
    <description>Added for IST-338</description>
    <label>Application Open Date</label>
    <type>DateTime</type>
</CustomField>