force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Campus__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Campus__c</fullName>
    <formula>L_AD_CourseInstance__r.L_AD_Campus_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campus</label>
    <type>Text</type>
</CustomField>