force-app/main/default/objects/CourseAvailability__c/fields/I_ST_College__c.field-meta.xml
<CustomField>
    <fullName>I_ST_College__c</fullName>
    <formula>L_AD_CourseInstance__r.L_AD_College_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College</label>
    <type>Text</type>
</CustomField>