force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Course_Availability_Year__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Availability_Year__c</fullName>
    <label>Course Availability Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>