force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Course_Award__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Award__c</fullName>
    <formula>L_AD_CourseInstance__r.L_AD_CourseParent__r.L_AD_Award_Title__c</formula>
    <label>Course Award</label>
    <type>Text</type>
</CustomField>