force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Course_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Type_Name__c</fullName>
    <formula>L_AD_CourseInstance__r.L_AD_CourseParent__r.L_AD_Course_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Type Name</label>
    <type>Text</type>
</CustomField>