force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Flagship_Course__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Flagship_Course__c</fullName>
    <formula>L_AD_CourseInstance__r.L_AD_CourseParent__r.I_ST_Flagship_Course__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flagship Course</label>
    <type>Checkbox</type>
</CustomField>