force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Provider__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Provider__c</fullName>
    <description>Added for IST-338</description>
    <label>Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>