force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Provider_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Provider_Course_Code__c</fullName>
    <description>Added for IST-338</description>
    <label>Provider Course Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>