force-app/main/default/objects/CourseAvailability__c/fields/I_ST_School__c.field-meta.xml
<CustomField>
    <fullName>I_ST_School__c</fullName>
    <formula>L_AD_CourseInstance__r.I_ST_School_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Text</type>
</CustomField>