force-app/main/default/objects/CourseAvailability__c/fields/I_ST_SISOne_Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>I_ST_SISOne_Academic_Year__c</fullName>
    <description>Added for LT360-57</description>
    <label>Availability Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>