force-app/main/default/objects/CourseAvailability__c/fields/I_ST_Teaching_Period__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Teaching_Period__c</fullName>
    <label>Teaching Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>