force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Application_Assessment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Application_Assessment_Due_Date__c</fullName>
    <description>Application-Assessment-Due-Date</description>
    <label>Application Assessment Due Date</label>
    <type>Date</type>
</CustomField>