force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Available_For_Onshore_International__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Available_For_Onshore_International__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intake for Onshore International</description>
    <label>Onshore International</label>
    <type>Checkbox</type>
</CustomField>