force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Campus_Code__c</fullName>
    <description>Campus Code from CI</description>
    <formula>L_AD_CourseInstance__r.L_AD_Campus_Code__c</formula>
    <label>Campus Code</label>
    <type>Text</type>
</CustomField>