force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Course_Availability_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Availability_Code__c</fullName>
    <description>Course Availability Code -</description>
    <label>Course Availability Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>