force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Course_Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Availability_Status__c</fullName>
    <description>Course Availability Status</description>
    <label>Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AID_Status</valueSetName>
    </valueSet>
</CustomField>