force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Course_Instance_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Instance_Code__c</fullName>
    <formula>L_AD_CourseInstance__r.L_AD_Course_Instance_Code__c</formula>
    <label>Course Instance Code</label>
    <type>Text</type>
</CustomField>