force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Course_Parent_Version_Year__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Parent_Version_Year__c</fullName>
    <formula>L_AD_CourseInstance__r.L_AD_Course_Parent_Version_Year__c</formula>
    <label>Course Parent Version Year</label>
    <type>Text</type>
</CustomField>