force-app/main/default/objects/CourseAvailability__c/fields/L_AD_CourseInstance__c.field-meta.xml
<CustomField>
    <fullName>L_AD_CourseInstance__c</fullName>
    <label>Course Instance</label>
    <referenceTo>CourseInstance__c</referenceTo>
    <relationshipLabel>Course Availability</relationshipLabel>
    <relationshipName>Course_Availability</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>