force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Intake_Period__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Period</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IntakePeriod__c.L_AD_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please ensure lookup table is updated to display all active Intake Periods.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>IntakePeriod__c</referenceTo>
    <relationshipLabel>Course Availability</relationshipLabel>
    <relationshipName>Course_Availability</relationshipName>
    <type>Lookup</type>
</CustomField>