force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Intake_Period_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period_Code__c</fullName>
    <formula>TEXT(L_AD_Intake_Period__r.L_AD_Intake_Period_Code__c)</formula>
    <label>Intake Period Code</label>
    <type>Text</type>
</CustomField>