force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Intake_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period_End_Date__c</fullName>
    <formula>L_AD_Intake_Period__r.L_AD_End_Date__c</formula>
    <label>Intake Period End Date</label>
    <type>Date</type>
</CustomField>