force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Intake_Period_Name__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period_Name__c</fullName>
    <formula>TEXT(L_AD_Intake_Period__r.L_AD_Intake_Period_Name__c)</formula>
    <label>Intake Period</label>
    <type>Text</type>
</CustomField>