force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Intake_Period_Year__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Intake_Period_Year__c</fullName>
    <formula>L_AD_Intake_Period__r.L_AD_Intake_Period_Year__c</formula>
    <label>Intake Period Year</label>
    <type>Text</type>
</CustomField>