force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Onshore_Study_Modes_Mixed_Mode__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Onshore_Study_Modes_Mixed_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available For Mixed Mode</label>
    <type>Checkbox</type>
</CustomField>