force-app/main/default/objects/CourseAvailability__c/fields/L_AD_Overriding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Overriding_Start_Date__c</fullName>
    <description>Date of commencement of course</description>
    <label>Overriding Start Date</label>
    <type>Date</type>
</CustomField>