force-app/main/default/objects/CourseAvailability__c/fields/L_AD_SISOne_Availability_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_SISOne_Availability_Code__c</fullName>
    <description>SISOne-availability-Code</description>
    <label>SISOne Availability Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>