force-app/main/default/objects/CourseAvailability__c/fields/L_AD_SISOne_Availability_Version__c.field-meta.xml
<CustomField>
    <fullName>L_AD_SISOne_Availability_Version__c</fullName>
    <description>SISOne-availability-Version</description>
    <label>SISOne Availability Version</label>
    <length>64</length>
    <type>Text</type>
</CustomField>