force-app/main/default/objects/CourseAvailability__c/fields/L_AD_SISOne_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_SISOne_Course_Code__c</fullName>
    <description>SISOne-Course-code</description>
    <label>SISOne Course Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>