force-app/main/default/objects/CourseAvailability__c/validationRules/Archived_Status_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Archived_Status_cannot_be_changed</fullName>
    <active>true</active>
    <description>If Status = Retired, it cannot be changed.</description>
    <errorConditionFormula>AND(
ISCHANGED( L_AD_Course_Availability_Status__c ),
ISPICKVAL(PRIORVALUE( L_AD_Course_Availability_Status__c ),&quot;Archived&quot;)
)</errorConditionFormula>
    <errorDisplayField>L_AD_Course_Availability_Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed for a &quot;Archived&quot; record.</errorMessage>
</ValidationRule>