force-app/main/default/objects/CourseAvailability__c/validationRules/Cannot_Update_Cohort_Domestic.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Cohort_Domestic</fullName>
    <active>true</active>
    <description>Cannot update Domestic value if unticked at Course Instance level.</description>
    <errorConditionFormula>AND(
   ISCHANGED( L_AD_Available_For_Domestic__c ) ,
   L_AD_CourseInstance__r.L_AD_Available_For_Domestic__c = FALSE,
   L_AD_Available_For_Domestic__c = TRUE
   )</errorConditionFormula>
    <errorDisplayField>L_AD_Available_For_Domestic__c</errorDisplayField>
    <errorMessage>This is not allowed as &quot;Available For Cohort - Domestic&quot; is unchecked on Course Instance record.</errorMessage>
</ValidationRule>