force-app/main/default/objects/CourseAvailability__c/validationRules/Cannot_Update_Cohort_International.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Cohort_International</fullName>
    <active>true</active>
    <description>Cannot update Onshore International value if unticked at Course Instance level.</description>
    <errorConditionFormula>AND(
   ISCHANGED( L_AD_Available_For_Onshore_International__c ) ,    
L_AD_CourseInstance__r.L_AD_Available_For_Onshore_International__c  = FALSE,
   L_AD_Available_For_Onshore_International__c = TRUE
   )</errorConditionFormula>
    <errorDisplayField>L_AD_Available_For_Onshore_International__c</errorDisplayField>
    <errorMessage>This is not allowed as &quot;Available For Cohort - Onshore International&quot; is unchecked on Course Instance record.</errorMessage>
</ValidationRule>