force-app/main/default/objects/CourseAvailability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_AD_CourseInstance__c</columns>
    <columns>L_AD_Course_Availability_Status__c</columns>
    <columns>L_AD_Available_For_Domestic__c</columns>
    <columns>L_AD_Available_For_Onshore_International__c</columns>
    <columns>L_AD_Campus_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>