force-app/main/default/objects/CourseAvailability__c/listViews/I_ST_All_Course_Availabilities.listView-meta.xml
<ListView>
    <fullName>I_ST_All_Course_Availabilities</fullName>
    <columns>NAME</columns>
    <columns>I_ST_Course_Award__c</columns>
    <columns>I_ST_Campus__c</columns>
    <columns>L_AD_Intake_Period_Name__c</columns>
    <columns>L_AD_Course_Instance_Version_Year__c</columns>
    <columns>L_AD_Intake_Period_Start_Date__c</columns>
    <columns>L_AD_Domestic_Study_Modes_Full_Time__c</columns>
    <columns>L_AD_Domestic_Study_Modes_Part_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - SACE</label>
</ListView>